repos/makepy/contents/test/fail/Python.rules
all:
    %)(@ f23 a zzx )